--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
 
 <head>
-  <title>Kyle Fischer</title>
+  <title>Fisch's Website Of MagicalNess</title>
 </head>
 
 <body>
 
-  <h1>Hello World</h1>
-  <p>This is a paragraph.</p>
+  <h1>We got nothing here so far</h1>
+  <p>So go ahead and go away.</p>
+  
+  <h2>This is just a test for some random things</h2>
+  <a href="file.txt">Download File</a>
 
 </body>
 
