Trying with file structures

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <p>So go ahead and go away.</p>
   
   <h2>This is just a test for some random things</h2>
-  <a href="file.txt">Download File</a>
+  <a href="Downloads\TestFolder\file.txt">Download File</a>
 
 </body>
 
