--- a/index.html
+++ b/index.html
@@ -2,17 +2,59 @@
 <html>
 
 <head>
-  <title>Fisch's Website Of MagicalNess</title>
+  <title>Kyle Fischer</title>
+  <link rel="stylesheet" type="text/css" href="Assets/css/main.css">
 </head>
 
 <body>
+	<center><img src="Assets/images/facebookProfile.jpg" alt="Me" style="width:280px;height:280px;"></center>
+  <h1>About Me</h1>
+  <p>Hello, my name is Kyle Fischer. I am a Junior studying Computer Science at Purdue University. I am focusing on the
+  software engineering track with also some classes in security. In my free time I like to video edit, play video games, and skiing.</p>
+  <div class="classes">
+  <h2>Relevant Classwork</h2>
+	<ul>
+	<li>Object Orientated Programming</li>
+	<li>Programming in C</li>
+	<li>Analysis of Algorithms</li>
+	<li>Intro to Cryptology</li>
+	<li>Data Structures and Algorithms</li>
+	<li>Software Testing</li>
+	<li>Software Engineering</li>
+	<li>Hardware</li>
+	<li>Systems Programming</li>
+	<li>Operating Systems</li>
+	
+	
+	</ul>  
+  </div>
+  <h2>Languages</h2>
+  <div class="classes">
+	<ul>
+	<li>C</li>
+	<li>Java</li>
+	<li>VB.net</li>
+	<li>HTML</li>
+	<li>MatLab</li>
+	<li>LabView</li>
+	<li>Javascript</li>
+	<li>Powershell Scripting</li>
 
-  <h1>We got nothing here so far</h1>
-  <p>So go ahead and go away.</p>
+	</ul>  
+  </div>
   
-  <h2>This is just a test for some random things</h2>
-  <a href="Downloads\TestFolder\file.txt">Download File</a>
-
+  <h2>Projects</h2>
+  <p>Here are some of the projects I have worked on over the past few years</p>
+  <div class="projects">
+  
+  <a href="Downloads\TestFolder\file.txt">Test File</a><br>
+  <a href="Downloads\TestFolder\file.txt">PlayDeck</a><br>
+  <a href="Downloads\TestFolder\file.txt">EatThis</a><br>
+  <a href="Downloads\TestFolder\file.txt">Xtern Hackathon 2016: Drank</a><br>
+  <a href="Downloads\TestFolder\file.txt">Indy Civic Hack: IPS Website</a><br>
+  <a href="Downloads\TestFolder\file.txt">Minecraft 1.7.10 mod</a>
+  
+	</div>
 </body>
 
 </html>
