--- a/Contact.html
+++ b/Contact.html
@@ -4,12 +4,14 @@
 <head>
   <title>Kyle Fischer</title>
   <link rel="stylesheet" type="text/css" href="Assets/css/main.css">
+  <center>
   <ul>
-  <li><a href="index.html">Home</a></li>
+   <li><a href="index.html">Home</a></li>
   <li><a href="classes.html">Classes</a></li>
   <li><a href="Contact.html">Contact</a></li>
   <li><a href="projects.html">Projects</a></li>
   <li style="float:right"><a class="active" href="#about">About</a></li>
+  </center>
 </ul>
 </head>
 
@@ -18,10 +20,11 @@
 	<center><img src="Assets/images/facebookProfile.jpg" alt="Me" style="width:280px;height:280px;"></center>
   <hr>
   
-  <h1>About Me</h1>
-  <p>Hello, my name is Kyle Fischer. I am a Junior studying Computer Science at Purdue University. I am focusing on the
-  software engineering track with also some classes in security. In my free time I like to video edit, play video games, and skiing.</p>
-
+  <h2>Contact Me</h2>
+  <p>You can reach me by: </p>
+  <p>Cell Phone: (812)-631-0355</p>
+  <p>Email: fische17@purdue.edu</p>
+  <center><a href="https://www.facebook.com/kylejamesfischer">Facebook</a></center>
 
 </body>
 
